// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`strong.md with options: {"type":{"text":false}}: strong.md 1`] = `
**abc123**

**我a我1**
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
**abc123**

**我a我1**

`;

exports[`strong.md with options: undefined: strong.md 1`] = `
**abc123**

**我a我1**
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
**abc123**

**我 a 我 1**

`;
